# Connor.ai

./: .gitignore  .ignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_persistence_schema.py  0002_add_write_policy_to_evaluations.py
app/: __init__.py  cli.py  config.py  exceptions.py  main.py
app/agents/: __init__.py  agentscope_tools.py  config.py  model_factory.py  outputs.py  prompts.py  registry.py  runner.py  schemas.py
app/api/: __init__.py  dependencies.py  main.py  routes.py  schemas.py
app/clusterer/: __init__.py  materialization.py  tasks.py
app/core/: __init__.py  ids.py
app/db/: __init__.py  base.py  session.py  types.py
app/domain/: __init__.py  artifact.py  base.py  calls.py  candidate.py  cluster.py  enums.py  evaluation.py  evidence.py  report.py  report_evaluation.py  review.py  run.py  thread.py  tool.py  trace.py  watchlist.py
app/evaluators/: __init__.py  materialization.py  profiles.py  report_judge.py  tasks.py
app/harness/: __init__.py  collect.py  config.py  context.py  decisions.py  exceptions.py  gates.py  materialization.py  runner.py  writing.py
app/repositories/: __init__.py  base.py  cleanup.py  domain.py  runs.py
app/scouts/: __init__.py  profiles.py  tasks.py
app/services/: __init__.py  artifacts.py  tracing.py
app/tools/: __init__.py  base.py  builtin.py  cookie_health.py  executor.py  http.py  registry.py  source_tools.py
app/watchlist/: __init__.py  lifecycle.py  (+2 more)
docs/: DEV_LOG.md  MASTER_PLAN.md  PROGRESS.md
tests/: __init__.py  conftest.py
(+101 files in other folders)
