[project]
name = "connor-ai"
version = "0.1.0"
description = "Traceable multi-agent frontier intelligence system for AI, semiconductors, and tech finance."
requires-python = ">=3.12"
dependencies = [
    "agentscope>=2.0",
    "fastapi>=0.115",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "uvicorn[standard]>=0.30",
    "playwright>=1.45",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-p no:cacheprovider"

[tool.ruff]
line-length = 100
target-version = "py312"
